# autora-experimentalist-challenge-g-1

./: .gitignore  404.html  README.md  benchmark.py  confirmation.py  index.html  mkdocs.yml  pyproject.toml
Additional Example/: index.html
Basic Usage/: index.html
Benchmark/: Benchmark.ipynb  index.html
challenge/: AutoRA_Experimentalist_Benchmarking_(Validation).ipynb  benchmark.py  distributions_plots.ipynb  experimentalist_benchmarking.ipynb  utils.py
docs/: Basic Usage.ipynb  Benchmark.ipynb  index.md
quickstart/: index.html  quickstart.md
search/: search_index.json
src/autora/experimentalist/adaptable/: __init__.py  utils.py
src/autora/experimentalist/autora_experimentalist_example/: __init__.py  utils.py
src/autora/experimentalist/confirmation/: __init__.py
src/autora/experimentalist/progressive/: __init__.py  utils.py
src/autora/experimentalist/progressive_multi/: __init__.py
tests/: test_sampler_weights.py
