[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-adaptable-experimentalist"
description = "adaptable experimentalist for autora"
authors = []
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora",
    "scikit-learn",
    "autora-theorist-bms",
    "autora[all-experimentalists]",
    "matplotlib",
    "dataclasses",
    "typing",
    "statistics"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
]

test = [
    "pytest",
    "hypothesis"
]

[project.urls]
repository = "https://github.com/MoAljam/autora-experimentalist-challenge-g-1"
documentation = "https://MoAljam.github.io/autora-experimentalist-challenge-g-1/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
